--- a/src/index.css
+++ b/src/index.css
@@ -33,9 +33,21 @@
       text-fill-color: transparent;
     }
   }
+  
   @layer utilities {
     .text-gradient2 {
       background-image: linear-gradient(110.1deg, rgb(241, 115, 30) 18.9%, rgb(231, 29, 54) 90.7%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      text-fill-color: transparent;
+    }
+  }
+  
+
+  @layer utilities {
+    .modal-gradient {
+      background-image: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
