add faq section

--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ body {
   background: linear-gradient(to bottom,  #23194F,#604CC3);
 }
 .company {
-  background: linear-gradient(to bottom,  #0D0631,#000001);
+  background: linear-gradient(to bottom,  #0D0631,#00001F);
 }
 .grad {
   background: linear-gradient(to bottom, #02000b, #020107);
