--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,14 @@ body {
 ::-webkit-scrollbar-track {
   background: #7e22ce;
 }
+.example::-webkit-scrollbar {
+  display: none;
+}
 
+.example {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 @layer utilities {
   .text-gradient {
     background-image: linear-gradient(
@@ -82,11 +89,28 @@ body {
 .grad2 {
   background: linear-gradient(to bottom, #0e0631, #03010b);
 }
-
+  
 .faqImg {
   background-image: url(./assets/bottom-layer.webp);
 }
+.howCourseWork{
+  background: linear-gradient(to right, #220D39, #15063C);
+}
 
+.Specialty {
+  background: linear-gradient(
+    to bottom,
+    rgba(49, 49, 53, 0.7),  /* 10% opacity for the first color */
+    rgba(53, 1, 158, 0.1)   /* 10% opacity for the second color */
+  );
+}
+.Specialty2 {
+  background: linear-gradient(
+    to bottom,
+    rgba(44, 1, 135, 0.7),  /* 10% opacity for the first color */
+    rgba(53, 1, 158, 0.1)   /* 10% opacity for the second color */
+  );
+}
 @layer utilities {
   .text-gradient2 {
     background-image: linear-gradient(
