add text in header and animation in team

--- a/src/components/home/popular-course/PopularCourse.css
+++ b/src/components/home/popular-course/PopularCourse.css
@@ -1,28 +1,42 @@
-
+.course-container {
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+  height: 450px;
+  width: 95vw;
+  position: relative;
+}
 
 .course {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: zigzag 15s linear infinite;
+  position: relative;
+  margin: 0 10px;
+  animation: zigzag 12s linear infinite;
+  animation-play-state: running;
+}
+
+.course-container:hover .course {
+  animation-play-state: paused;
 }
 
 @keyframes zigzag {
   0% {
-    transform: translateX(0) translateY(0px);
+    transform: translateX(100vw) translateY(0);
   }
   25% {
-    transform: translateX(0) translateY(-30px);
+    transform: translateX(50vw) translateY(-30px);
   }
   50% {
-    transform: translateX(0) translateY(25px);
+    transform: translateX(0vw) translateY(30px);
   }
   75% {
-    transform: translateX(0) translateY(-25px);
+    transform: translateX(-50vw) translateY(-30px);
   }
   100% {
-    transform: translateX(-100) translateY(0px);
+    transform: translateX(-100vw) translateY(0);
   }
 }
 
@@ -31,48 +45,36 @@
 }
 
 .course:nth-child(2) {
-  animation-delay: 3s;
+  animation-delay: -2s;
 }
 
 .course:nth-child(3) {
-  animation-delay: 6s;
+  animation-delay: -4s;
 }
 
 .course:nth-child(4) {
-  animation-delay: 9s;
+  animation-delay: -6s;
 }
 
 .course:nth-child(5) {
-  animation-delay: 12s;
+  animation-delay: -8s;
 }
 
-
-
-/* .course {
-  position: relative;
-  display: inline-block;
+.course:nth-child(6) {
+  animation-delay: -10s;
 }
 
-
-.course:hover::after {
-  content: attr(title); 
-  position: absolute;
-  background-color: #333;
-  color: #fff;
-  padding: 5px;
-  border-radius: 5px;
-  white-space: nowrap;
-  top: 100%; 
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
-  font-size: 12px;
-  opacity: 0;
-  transition: opacity 0.3s;
-  pointer-events: none;
+.course:nth-child(7) {
+  animation-delay: -12s;
 }
 
+.course:nth-child(8) {
+  animation-delay: -14s;
+}
 
-.course:hover::after {
-  opacity: 1;
-} */
+.imageDIV {
+  width: 150px;
+  height: 200px;
+  clip-path: polygon(0 0, 80% 0, 100% 30%, 100% 100%, 0% 100%);
+  border-top-right-radius: 20px;
+}
