--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,9 @@ body {
 .faq {
   background: linear-gradient(to right, #604cc3, #00001f);
 }
+.test{
+  background: linear-gradient(to right, #604cc3, #00001f);
+}
 .Specialty {
   background: linear-gradient(
     to bottom,
