--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,14 @@
   border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
 }
 
-.custom-scroll::-webkit-scrollbar {
+/* .custom-scroll::-webkit-scrollbar {
   display: none;
 }
 
 .custom-scroll {
   -ms-overflow-style: none;
   scrollbar-width: none;
-}
+} */
 
 body {
   font-family: "Roboto", sans-serif;
@@ -22,17 +22,17 @@ body {
   width: 3px;
 }
 
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   background: #7e22ce;
 }
 .example::-webkit-scrollbar {
   display: none;
-}
+} */
 
-.example {
+/* .example {
   -ms-overflow-style: none;
   scrollbar-width: none;
-}
+} */
 @layer utilities {
   .text-gradient {
     background-image: linear-gradient(
@@ -99,7 +99,7 @@ body {
 .faq {
   background: linear-gradient(to right, #604cc3, #00001f);
 }
-.test{
+.test {
   background: linear-gradient(to right, #604cc3, #00001f);
 }
 .Specialty {
@@ -116,20 +116,14 @@ body {
     rgba(53, 1, 158, 0.1)
   );
 }
-@layer utilities {
-  .text-gradient2 {
-    background-image: linear-gradient(
-      110.1deg,
-      rgb(241, 115, 30) 18.9%,
-      rgb(231, 29, 54) 90.7%
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-fill-color: transparent;
-  }
-}
 
+.text-gradient2 {
+  background: linear-gradient(
+    110.1deg,
+    rgb(241, 115, 30) 18.9%,
+    rgb(231, 29, 54) 90.7%
+  );
+}
 @layer utilities {
   .text-gradient3 {
     background-image: linear-gradient(
